# gnome-code-assistance

./: AUTHORS  Makefile.am  NEWS  README  README.md  configure.ac  gnome-code-assistance.doap
backends/: Makefile.am
backends/c/: Makefile.am  __init__.py  c.in  clangimporter.py  config.py.in  makefileintegration.py  org.gnome.CodeAssist.c.service.in  org.gnome.CodeAssist.v1.c.service.in  service.py
backends/c/clang/: cindex.py
backends/common/: Makefile.am  app.py  cassist.py  transport_dbus.py
backends/common/gnome/codeassistance/: __init__.py  transport_dbus.py  types.py
backends/css/: Makefile.am  __init__.py  app.rb  css.in  deps.mf  mkdeps.py  org.gnome.CodeAssist.css.service.in  org.gnome.CodeAssist.v1.css.service.in
backends/go/: Makefile.am  app.go  dbus.go  deps.mk  diagnostic.go  diagnostic_dbus.go  document.go  document_dbus.go  go.go  mkdeps.py  options.go  org.gnome.CodeAssist.go.service.in  org.gnome.CodeAssist.v1.go.service.in  parser.go  platform_dbus.go  server_dbus.go  service.go  service_dbus.go  transport.go  transport_dbus.go
backends/js/: Makefile.am  js.in  main.js  org.gnome.CodeAssist.js.service.in  org.gnome.CodeAssist.v1.js.service.in
backends/jscommon/: Makefile.am
backends/jscommon/gnome/codeassistance/: transport.js  transport_dbus.js  types.js
backends/json/: Makefile.am  __init__.py  deps.mf  json.in  mkdeps.py  org.gnome.CodeAssist.v1.json.service.in
backends/pycommon/: Makefile.am
backends/pycommon/gnome/codeassistance/: __init__.py  transport_dbus.py  types.py
backends/python/: Makefile.am  __init__.py  org.gnome.CodeAssist.python.service.in  org.gnome.CodeAssist.v1.python.service.in  python.in
backends/rbcommon/: Makefile.am
backends/rbcommon/gnome/codeassistance/: transport.rb  types.rb
backends/rbcommon/gnome/codeassistance/transport/: dbus.rb
backends/ruby/: Makefile.am  app.rb  org.gnome.CodeAssist.ruby.service.in  org.gnome.CodeAssist.v1.ruby.service.in  parser.rb  ruby.in
backends/sh/: Makefile.am  __init__.py  org.gnome.CodeAssist.sh.service.in  org.gnome.CodeAssist.v1.sh.service.in  sh.in
backends/vala/: Makefile.am  application.vala  config.vala.in  config.vapi  dbus.vala  diagnostics.vala  document.vala  hashutils.vala  helper.vala  makefileintegration.vala  options.vala  org.gnome.CodeAssist.v1.vala.service.in  org.gnome.CodeAssist.vala.service.in  rpc.vala  service.vala  types.vala  valaoptionparser.vala
backends/xml/: Makefile.am  __init__.py  org.gnome.CodeAssist.v1.xml.service.in  org.gnome.CodeAssist.xml.service.in  xml.in
backends/yaml/: Makefile.am  __init__.py  org.gnome.CodeAssist.v1.yaml.service.in  yaml.in
clients/gedit/: Makefile.am
clients/gedit/data/: Makefile.am  codeassistance.css
clients/gedit/src/: Makefile.am  gca-backend-implementation.vala  gca-backend-manager.vala  gca-backend.vala  gca-dbus.vala  gca-diagnostic-colors.vala  gca-diagnostic-message.vala  gca-diagnostic-support.vala  gca-diagnostic-tags.vala  gca-diagnostic.vala  gca-diagnostics.vala  gca-document-services.vala  gca-document.vala  gca-log.vala  gca-plugin.vala  gca-remote-service.vala  gca-scrollbar-marker.vala  gca-semantic-value-support.vala  gca-semantic-value.vala  gca-source-index.vala  gca-source-location.vala  gca-source-range-support.vala  gca-source-range.vala  gca-view.vala  gca.vala
clients/gedit/vapi/: Makefile.am  gca-utils.vapi
data/: Makefile.am  org.gnome.codeassistance.gschema.xml.in
tests/: Makefile.am  config.py.in  dbus.conf.in  gcatypes.py  interfaces.json  service
tests/backends/: c.json  css.json  go.json  js.json  json.json  json_fail.json  python.json  ruby.json  ruby.rb  sh.json  vala.json  xml.json
tests/backends/c/all/: test.cc  test.hh
tests/backends/c/makefile/: test.cc
tests/backends/c/makefile/includes/: test.hh
tests/backends/go/: go_fail.go
tests/backends/js/: js_fail.js
tests/backends/python/: python_fail.py
