if PYTHON_ENABLE
include backends/pycommon/Makefile.am
endif

if RUBY_ENABLE
include backends/rbcommon/Makefile.am
endif

if BACKENDS_PYTHON_ENABLE
include backends/python/Makefile.am
endif

if BACKENDS_RUBY_ENABLE
include backends/ruby/Makefile.am
endif

if BACKENDS_XML_ENABLE
include backends/xml/Makefile.am
endif

if BACKENDS_VALA_ENABLE
include backends/vala/Makefile.am
endif

if BACKENDS_GO_ENABLE
include backends/go/Makefile.am
endif

if BACKENDS_C_ENABLE
include backends/c/Makefile.am
endif

GITIGNOREDEPS += backends/Makefile.am
