installcheck-local: check-service

check-service:
	$(srcdir)/tests/service

EXTRA_DIST +=						\
	tests/service					\
	tests/interfaces.json				\
	tests/gcatypes.py				\
	tests/dbus.conf					\
	tests/backends/ruby/ruby_fail.rb		\
	tests/backends/go/go_fail.go			\
	tests/backends/css.json				\
	tests/backends/json.json			\
	tests/backends/xml.json				\
	tests/backends/sh.json				\
	tests/backends/c/all/test.cc			\
	tests/backends/c/all/test.hh			\
	tests/backends/c/makefile/test.cc		\
	tests/backends/c/makefile/includes/test.hh	\
	tests/backends/c/makefile/Makefile		\
	tests/backends/c.json				\
	tests/backends/js/js_fail.js			\
	tests/backends/ruby.json			\
	tests/backends/js.json				\
	tests/backends/vala.json			\
	tests/backends/python/python_fail.py		\
	tests/backends/python.json			\
	tests/backends/json/json_fail.json		\
	tests/backends/go.json

