codeassistdir = $(GCA_BACKENDS_DIR)/codeassist
codeassist_PYTHON = \
	backends/common/codeassist/__init__.py

commonbackenddir = $(GCA_BACKENDS_DIR)/codeassist/common
commonbackend_PYTHON = 					\
	backends/common/transport_dbus.py		\
	backends/common/cassist.py			\
	backends/common/app.py				\
	backends/common/__init__.py

GITIGNOREDEPS += backends/common/Makefile.am
