pygnomecodeassistancebackenddir = $(GCA_BACKENDS_DIR)/gnome/codeassistance
pygnomecodeassistancebackend_PYTHON =					\
	backends/common/gnome/codeassistance/__init__.py		\
	backends/common/gnome/codeassistance/transport_dbus.py		\
	backends/common/gnome/codeassistance/types.py

pygnomebackenddir = $(GCA_BACKENDS_DIR)/gnome
pygnomebackend_PYTHON =							\
	backends/common/gnome/__init__.py

GITIGNOREDEPS += backends/common/Makefile.am
