cssbackenddir = $(GCA_PYBACKENDS_DIR)/css
cssbackend_PYTHON = 				\
	backends/css/__init__.py

cssbackendexecdir = $(GCA_BACKENDS_EXEC_DIR)
cssbackendexec_SCRIPTS = \
	backends/css/css

cssbackendservicedir = $(datadir)/dbus-1/services
cssbackendservice_DATA = \
	backends/css/org.gnome.CodeAssist.css.service

GITIGNOREDEPS += backends/css/Makefile.am
