jsbackenddir = $(GCA_JSBACKENDS_DIR)/js
jsbackend_DATA = 				\
	backends/js/main.js			\
	backends/js/acorn.js

jsbackendexecdir = $(GCA_BACKENDS_EXEC_DIR)
jsbackendexec_SCRIPTS = \
	backends/js/js

jsbackendservicedir = $(datadir)/dbus-1/services
jsbackendservice_DATA = \
	backends/js/org.gnome.CodeAssist.js.service

GITIGNOREDEPS += backends/js/Makefile.am
