jsgnomecodeassistancebackenddir = $(GCA_JSBACKENDS_ROOT)/gnome/codeassistance

jsgnomecodeassistancebackend_DATA =					\
	backends/jscommon/gnome/codeassistance/transport.js		\
	backends/jscommon/gnome/codeassistance/types.js			\
	backends/jscommon/gnome/codeassistance/transport_dbus.js

GITIGNOREDEPS += backends/jscommon/Makefile.am
