pygnomecodeassistancebackenddir = $(GCA_PYBACKENDS_ROOT)/gnome/codeassistance

pygnomecodeassistancebackend_PYTHON =					\
	backends/pycommon/gnome/codeassistance/__init__.py		\
	backends/pycommon/gnome/codeassistance/transport_dbus.py	\
	backends/pycommon/gnome/codeassistance/types.py

pygnomebackenddir = $(GCA_PYBACKENDS_ROOT)/gnome
pygnomebackend_PYTHON =							\
	backends/pycommon/gnome/__init__.py

GITIGNOREDEPS += backends/pycommon/Makefile.am
