pythonbackenddir = $(GCA_BACKENDS_DIR)/python
pythonbackend_PYTHON = 				\
	backends/python/__init__.py

pythonbackendexecdir = $(GCA_BACKENDS_EXEC_DIR)
pythonbackendexec_SCRIPTS = \
	backends/python/python

pythonbackendservicedir = $(datadir)/dbus-1/services
pythonbackendservice_DATA = \
	backends/python/org.gnome.CodeAssist.python.service
