xmlbackenddir = $(GCA_BACKENDS_DIR)/codeassist/xml
xmlbackend_PYTHON = 				\
	backends/xml/__init__.py

xmlbackendexecdir = $(GCA_BACKENDS_EXEC_DIR)
xmlbackendexec_SCRIPTS = \
	backends/xml/xml

xmlbackendservicedir = $(datadir)/dbus-1/services
xmlbackendservice_DATA = \
	backends/xml/org.gnome.CodeAssist.xml.service

GITIGNOREDEPS += backends/xml/Makefile.am
